# ble-pub-sub

./: README.md
ble-peripheral/: Cargo.toml
ble-peripheral/src/: main.rs
blogerr/: README.md  pubspec.yaml
blogerr/android/app/: build.gradle
blogerr/android/app/src/main/: AndroidManifest.xml
blogerr/android/app/src/main/kotlin/party/bent/blogerr/: MainActivity.kt
blogerr/android/app/src/profile/: AndroidManifest.xml
blogerr/lib/: ble.dart  definitions.dart  logs.dart  main.dart
blogerr/lib/widgets/: blurred_drawer.dart  gap.dart  logs_viewer.dart  phantom_icon.dart
blogerr/linux/: CMakeLists.txt  my_application.cc
blogerr/test/: widget_test.dart
blogerr/windows/: CMakeLists.txt
blogerr/windows/runner/: Runner.rc  main.cpp
