[package]
name = "ble-peripheral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluster = "0.2.0"
color-eyre = "0.6.2"
futures = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
uuid = "0.8.2"

[profile.dev.package.backtrace]
opt-level = 3
